trying to fix overlapping bars

--- a/client/src/styles/Sort.css
+++ b/client/src/styles/Sort.css
@@ -36,7 +36,7 @@
 }
 
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1200px){
     .vertical-bar{
         width: 10px;
     }
